--- a/index.html
+++ b/index.html
@@ -1,139 +1,101 @@
 <!DOCTYPE html>
-<html translate="no" class="no-js">
+<html>
+<meta charset='UTF-8'/><meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5' name='viewport'/><meta content='IE=edge' http-equiv='X-UA-Compatible'/>
 
+  <link rel="icon" type="image/svg+xml" href="https://feeldreams.github.io/main-icon.png"> 
+  <link rel="apple-touch-icon" href="https://feeldreams.github.io/main-icon.png">
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet">
+  
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script>
+  <script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script><link href="https://feeldreams.github.io/maukahkamu/style.css" rel="stylesheet" type="text/css" />
+  <script src="https://unpkg.com/scrollreveal"></script>
+  
 <head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Hai ❤</title>
-	<meta name="author" content="Heryoka">
-	<link rel="stylesheet" type="text/css" href="css/komponen.css" />
-	<link rel="stylesheet" type="text/css" href="css/animasi.css" />
-	<link rel="stylesheet" href="css/style.css">
-	<script src="js/modernizr.custom.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<title>Secret Message</title>
+<meta name="description" content="HTML Feeldream Repl Co">
 </head>
-
 <body>
-    <audio id="audio" src="audio/audio.mp3"></audio>
-	<div id="ruang-halaman" class="tempat-halaman">
-	    <!-- <a href="https://github.com/heryyy" target="_blank" class="tombolmelayang"><i class="fab fa-github"></i></a> -->
-		<div class="halaman halaman-1">
-			<div class="kotak">
-				<h1 class="ml1">
-					<span class="text-wrapper">
-						<span class="line line1"></span>
-						<span class="letters">Halo</span>
-						<span class="line line2"></span>
-					</span>
-				</h1>
-				<div class="tempat-tombol">
-					<button id="tombolMulaiSekarang" class="mulai-sekarang">Start</button>
+	
+   <div class="overlay">
+     <div class="loading-message">Hai kamu!<br>Tunggu dulu ya..</div>
+   </div>
 
-				</div>
-			</div>
-		</div>
-		<div class="halaman halaman-2">
-			<div class="kotak">
-				<h1 class="ml15">
-					<span class="word">Perkenalkan</span>
-					<span class="word">Namaku ......</span>
-				</h1>
-			</div>
-		</div>
-		<div class="halaman halaman-3">
-			<div class="kotak">
-				<h1 class="ml16">Arjuna Jerry F</h1>
-			</div>
-		</div>
-		<div class="halaman halaman-4">
-			<div class="kotak">
-				<h1 class="ml11">
-					<span class="text-wrapper">
-						<span class="line line1"></span>
-						<span class="letters">Jadi hari ini</span>
-					</span>
-				</h1>
-			</div>
-		</div>
-		<div class="halaman halaman-5">
-			<div class="kotak">
-				<h1 class="ml9">
-					<span class="text-wrapper">
-						<span class="letters">Aku mau beritahu sesuatu</span>
-					</span>
-				</h1>
-			</div>
-		</div>
-		<div class="halaman halaman-6">
-			<div class="kotak">
-				<h1 class="ml2">Sebenarnya aku</h1>
-			</div>
-		</div>
+   <audio src="https://feeldreams.github.io/maukahkamu/seandainya.mp3" id="linkmp3" class="sembunyi"></audio>
+   
+   <section class="first">
+       <div class="wp"><img id="imgsatu" src="https://feeldreams.github.io/maukahkamu/wpsatu.jpg"/></div>
+       <img id="first_stiker" class="stiker fade-in" src="https://feeldreams.github.io/bunga.gif"/>
+       <h1 class="title">Hei Kamuu!</h1>
+       <p class="flip">Aku boleh jujur engga nih? </p>
+       <p class="slide-up"><i>Scroll terus ke bawah ya :)</i></p>
+  </section>
+  
+  <section>
+      <div class="wp"><img id="imgdua" src="https://feeldreams.github.io/maukahkamu/wpdua.jpg"/></div>
+      <img class="stiker fade-in" src="https://feeldreams.github.io/pusn.gif"/>
+      <h2 class="title"><i>Sebenernya..</i></h2>
+      <p class="slide-right">Aku suka sama <b class="lingkar">kamu</b> :(</p>
+  </section>
+  
+  <section>
+  	<div class="wp"><img id="imgtiga" src="https://feeldreams.github.io/maukahkamu/wptiga.jpg"/></div>
+      <p id="teksnimasi">Kalo kamu tanya kenapa aku suka sama kamu, itu karena aku punya rasa nyaman tersendiri yang ga akan aku temui di mana pun.<br><br><b><i>Kamu Tau?</i></b><br>Gaada yang bisa bikin aku nyaman selain kamu..<br><br>Dan karena mengenalimu, aku merasakan apa itu kenyamanan, apa itu kebahagiaan, dan kamu sekaligus rumah bagiku :)</p>
+  </section>
+  
+  <section>
+  	<div class="wp"><img id="imgempat" src="https://feeldreams.github.io/maukahkamu/wpempat.jpg"/></div>
+      <img class="stiker fade-in" src="https://feeldreams.github.io/bunga.gif"/>
+      <h2 class="title"><i>Intinya,</i></h2>
+      <p class="slide-right"><b>Kamu Mau Gak<br>Jadi Pacar Aku? </b></p>
+      <div id="Tombol">
+       <a id="By" onClick="fungsimau()">Mau</a>
+       <a id="Bn" onClick="fungsigamau()">Gamau</a>
+     </div>
+  </section>
+  
+  <section id="iniakhir">
+  	<div class="wp" id="wpakhir"><img src="https://feeldreams.github.io/maukahkamu/wplima.jpg"/></div>
+      <img id="stikerakhir" class="stiker fade-in" src="https://feeldreams.github.io/g5.gif"/>
+      <img id="stikerakhir2" style="display:none" src="https://feeldreams.github.io/emawh.gif"/>
+      <h1 id="judulakhir"></h1>
+      <p id="kalimatakhir"></p>
+      <p id="palingakhir"></p>
+      <div id="TombolWA">
+       <a onClick="menuju()">Balas </a>
+     </div>
+  </section>
+  
+  <div id="initom" class="menu">
+  <a class='tombol' onclick="tes()">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16"> <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/> </svg>
+  </a>
+  </div>
 
-		<div class="halaman halaman-7">
-			<div class="kotak">
-				<h1 class="ml4">
-					<span class="letters letters-1">masih menyimpan rasa</span>
-					<span class="letters letters-2">sama kamu</span>
-					<span class="letters letters-3">Septi Agne Hera Sandy</span>
-				</h1>
-			</div>
-		</div>
+<script>
+function fungsimau(){
+       fungsi=0;tes();
+       teksjudulakhir = "Yeayyy! ";
+       tekskalimatakhir = "Makasii udah mau nerima<br>aku jadi pacar kamu, hihi ";
+}
+function fungsigamau(){
+       fungsi=0;tes();
+       teksjudulakhir = "Yahhh ";
+       tekskalimatakhir = "Yaudah kalo kamu gamau,<br>biar aku aja yang jadi<br>pacar kamu, hehe ";
+}
 
-		<div class="halaman halaman-8">
-			<div class="kotak">
-				<h1 class="ml12">Aku harap saat kamu melihat ini</h1>
-			</div>
-		</div>
+teksjudulakhir2 = "I Love You";
+tekspalingakhir = "Jangan lupa balas pesan<br>ke WhatsApp aku ya! ";
+  
+pesanwhatsapp = "Aku mau kok jadi pacar kamu ><";
 
-		<div class="halaman halaman-9">
-			<div class="kotak">
-				<h1 class="ml14">
-					<span class="text-wrapper">
-						<span class="letters">Kamu tidak benci dan jadi asing sama aku</span>
-						<span class="line"></span>
-					</span>
-				</h1>
-			</div>
-		</div>
-		<div class="halaman halaman-9">
-			<div class="kotak">
-				<h1 class="ml14">
-					<span class="text-wrapper">
-						<span class="letters">Jika Kamu Menerima kirim ❤ ke whatsapp aku</span>
-						<span class="line"></span>
-					</span>
-				</h1>
-			</div>
-		</div>
-
-		<div class="halaman halaman-10">
-			<div class="kotak">
-				<h1 class="ml7">
-					<span class="text-wrapper">
-						<span class="letters">Love You ❤</span>
-					</span>
-				</h1>
-			</div>
-		</div>
-
-		<div class="halaman halaman-11">
-			<div class="kotak">
-				<img src="gambar/bears-hug-love-you.gif" id="gambar" style="display: none;">
-				<h1 class="ml13">Septi ❤</h1>
-			</div>
-		</div>
-	</div>
-
-	<div class="pesan-ga-support-animasi">
-		<p>Browser Gak Support CSS! Ganti Browser Dulu Cuy</p>
-	</div>
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script src="js/transisi.js"></script>
-	<script src="js/salju.js" type="text/javascript"></script>
+const body = document.querySelector("body"); initom.style="opacity:0;bottom:0;transition:none"; audio = new Audio('' + linkmp3.src); function berjatuhan() {const heart = document.createElement("div"); heart.className = "fas fa-heart"; heart.style.left = (Math.random() * 90)+"vw"; heart.style.animationDuration = (Math.random()*3)+2+"s"; body.appendChild(heart);} setInterval(function name(params) {var heartArr = document.querySelectorAll(".fa-heart"); if (heartArr.length > 100) {heartArr[0].remove()}},100);
+</script>
+<script src="https://feeldreams.github.io/maukahkamu/main.js"></script>
 </body>
-
 </html>
